# pars3d

./: .gitignore  Cargo.toml  LICENSE  makefile  readme.md
examples/: 2d_grid_to_img.rs  bake_textures.rs  brighten_vert_colors.rs  grid_to_img.rs  honeycomb.rs  img_to_grid.rs  is_manifold.rs  per_face_texture.rs  quad_remesh.rs  render_uv.rs  subdiv.rs  uninvert_2.rs  uninvert_uv.rs  untriangulate_grid.rs  uv_chart_coloring.rs  wireframe.rs
src/: aabb.rs  adjacency.rs  anim.rs  boundary_loops.rs  coloring.rs  edge.rs  face.rs  fbx.rs  func.rs  fuse.rs  geom_processing.rs  gltf.rs  grid.rs  isect.rs  lib.rs  material.rs  merl.rs  mesh.rs  noise.rs  obj.rs  off.rs  ply.rs  ppm.rs  quat.rs  rand.rs  stl.rs  svg.rs  tet_bary.rs  tracing.rs  tri_to_quad.rs  util.rs  visualization.rs  vrml.rs
src/fbx/: export.rs  mod.rs  parser.rs  to_anim.rs  to_mesh.rs
src/fbx/test_data/: cube.fbx
src/geom_processing/: collapsible.rs  curvature.rs  delaunay.rs  instant_meshes.rs  kdtree.rs  mod.rs  polygon_kernel.rs  subdivision.rs
src/gltf/: gltf.rs  mod.rs  to_mesh.rs
src/msh/: mod.rs
src/off/: mod.rs  to_mesh.rs
src/parse_args/: Cargo.toml
src/parse_args/src/: lib.rs
src/ply/: mod.rs  to_mesh.rs
src/stl/: binary.rs  mod.rs  to_mesh.rs
src/uv/: conservative_rasterize.rs  mod.rs  packing.rs
src/vrml/: mod.rs  to_mesh.rs
tests/: adjacency.rs  subdiv_tet.rs
