[package]
name = "pars3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
gltf = { version = "1.4.1", features = ["utils"], optional = true }
fbxcel-dom = { version = "0.0.10", optional = true }
gltf-json = { version = "1.4.1", optional = true }
fbxcel = { version = "0.9.0", features = ["tree"], optional = true }

[features]
default = ["gltf"]
f64 = []
gltf = ["dep:gltf", "dep:gltf-json"]
fbx = ["dep:fbxcel-dom", "dep:fbxcel"]
