[package]
name = "pars3d"
version = "0.1.0"
edition = "2021"
default-run = "convert"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
gltf = { version = "1.4.1", features = ["utils", "KHR_materials_pbrSpecularGlossiness"], optional = true }
gltf-json = { version = "1.4.1", optional = true, features = ["names"] }
zune-inflate = { version = "0.2", default-features = false, features = ["zlib"] }

[features]
default = ["gltf", "fbx", "strict_fbx"]
f64 = []
gltf = ["dep:gltf", "dep:gltf-json"]
fbx = []
strict_fbx = []
