[package]
name = "pars3d"
version = "0.1.0"
edition = "2024"
default-run = "convert"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
gltf = { version = "1.4.1", features = ["utils", "KHR_materials_pbrSpecularGlossiness"], optional = true }
gltf-json = { version = "1.4.1", optional = true, features = ["names"] }
zune-inflate = { version = "0.2", default-features = false, features = ["zlib"] }
svg = { version = "0.18.0", optional = true }
kdtree = { git = "https://github.com/JulianKnodt/kdtree", version = "0.1.0", optional = true }
#kdtree = { path = "../kdtree", version = "0.1.0", optional = true }
rand = { version = "0.9.1", optional = true, features = ["small_rng"] }

[features]
default = ["gltf", "fbx", "strict_fbx"]
f64 = []
gltf = ["dep:gltf", "dep:gltf-json"]
fbx = []
strict_fbx = []
extended_attrs = []

svg = ["dep:svg"]
kdtree = ["dep:kdtree"]
rand = ["dep:rand"]
